# my_volume_renderer

./: CMakeLists.txt  README.md
scripts/: colorbar.py
src/: main.cpp  mvr.cpp  shader.hpp
src/util/: transferfunc.cpp  util.hpp
